--- a/upgrade.html
+++ b/upgrade.html
@@ -270,22 +270,37 @@
     if (s === 'expirado') return 'bg-gray-100 text-gray-700 ring-gray-200';
     return 'bg-gray-100 text-gray-700 ring-gray-200';
   }
-
   async function createPixPayment(planId){
     const user = auth.currentUser;
     if (!user) throw new Error('Você precisa estar logado.');
+
+    const ctx = (typeof getGuildContext === 'function' ? getGuildContext() : null) || {};
+    const guildId = String(ctx.guildId || '');
+    const uid = String(user.uid || '');
+    const email = String(user.email || '');
+
+    if (!planId) throw new Error('Plano inválido.');
+    if (!guildId) throw new Error('Guilda não encontrada (guildId).');
+
+    // Token (opcional para o backend validar no futuro)
     const idToken = await user.getIdToken(true);
 
     const res = await fetch('/api/mp_create_pix', {
       method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ planId, idToken })
+      headers: { 
+        'Content-Type': 'application/json',
+        'Authorization': `Bearer ${idToken}`
+      },
+      body: JSON.stringify({ plano: String(planId).toLowerCase(), uid, email, guildId })
     });
 
     const data = await res.json().catch(() => ({}));
     if (!res.ok) {
       throw new Error(data?.error || 'Falha ao criar pagamento.');
     }
+    return data;
+  }
+
     return data;
   }
 
@@ -409,8 +424,10 @@
         const qrWrap = root.querySelector('#qr-wrap');
         const qrImg = root.querySelector('#qr-img');
 
-        if (data.qrCodeBase64 && qrImg) {
-          qrImg.src = `data:image/png;base64,${data.qrCodeBase64}`;
+        const qrB64 = data.qrCodeBase64 || data.qrBase64 || '';
+
+        if (qrB64 && qrImg) {
+          qrImg.src = `data:image/png;base64,${qrB64}`;
           if (qrLoading) qrLoading.classList.add('hidden');
           if (qrWrap) qrWrap.classList.remove('hidden');
         } else {
