Atualizar o upgrade.html

--- a/upgrade.html
+++ b/upgrade.html
@@ -98,7 +98,7 @@
       <section class="px-4 lg:px-8 py-6">
         <div id="plans" class="grid grid-cols-2 lg:grid-cols-4 gap-3"></div>
         <div class="mt-4 text-sm text-gray-600 bg-white rounded-xl border border-gray-200 p-4">
-          <b>Como funciona a liberação:</b> após solicitar e confirmar o pagamento, a ativação do plano normalmente acontece entre <b>30 minutos</b> e <b>5 horas</b>. Solicitações feitas após <b>22:00</b> podem ser ativadas apenas a partir de <b>06:00</b>.
+          <b>Como funciona a liberação:</b> após solicitar e confirmar o pagamento, a ativação do plano normalmente acontece em menos de <b>10 segundos</b>. Se o pagamento for aprovado e o plano <b>não ativar</b> entre em contato em nosso instagram <b>@guildahub</b>.
         </div>
       </section>
 
