--- a/camp.html
+++ b/camp.html
@@ -77,7 +77,7 @@
   <!-- Modal Camp (Mantido igual) -->
   <div id="camp-modal" class="fixed inset-0 z-50 flex items-end sm:items-center justify-center hidden">
     <div class="fixed inset-0 bg-black/40" onclick="closeCampModal()"></div>
-    <div class="relative bg-white w-full sm:max-w-lg sm:rounded-2xl rounded-t-2xl max-h-[90vh] overflow-y-auto animate-in">
+    <div class="relative bg-white w-full sm:max-w-lg sm:rounded-2xl rounded-t-2xl max-h-[90vh] overflow-y-auto overscroll-contain animate-in" style="padding-bottom: env(safe-area-inset-bottom);">
       <div class="flex items-center justify-between p-5 border-b border-gray-100 bg-white rounded-t-2xl sticky top-0">
         <h3 id="camp-modal-title" class="text-lg font-bold text-gray-900">Novo Campeonato</h3>
         <button onclick="closeCampModal()" class="p-2 text-gray-400 hover:bg-gray-100 rounded-lg"><i data-lucide="x" class="w-5 h-5"></i></button>
@@ -175,7 +175,6 @@
           </div>
         </div>
 
-        </div>
         <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Local</label><input id="camp-local" type="text" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></div>
         <div class="grid grid-cols-2 gap-3">
           <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Máx. Participantes</label><input id="camp-max" type="number" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></div>
@@ -627,6 +626,9 @@
             renderCamps();
           }, (err) => {
             console.error(err);
+            // Não quebra a UI se der permissão/erro de rede: mantém cache
+            window.camps = getCache();
+            renderCamps();
             showToast('error', 'Falha ao sincronizar campeonatos: ' + err.message);
           });
         }
