--- a/camp.html
+++ b/camp.html
@@ -152,7 +152,13 @@
         </div>
 
         <div>
-          <label class="block text-sm font-medium text-gray-700 mb-1.5">Link para informações (obrigatório) *</label>
+          <label class="block text-sm font-medium text-gray-700 mb-1.5">
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1.5">Premiação total (R$) (opcional)</label>
+          <input id="camp-prizeTotal" type="number" step="0.01" min="0" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500" placeholder="Ex: 200,00">
+        </div>
+
+Link para informações (obrigatório) *</label>
           <input id="camp-link" type="url" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500" placeholder="WhatsApp, Instagram, grupo, etc" required>
         </div>
 
@@ -177,7 +183,7 @@
 
         <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Local</label><input id="camp-local" type="text" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></div>
         <div class="grid grid-cols-2 gap-3">
-          <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Máx. Participantes</label><input id="camp-max" type="number" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></div>
+          <div><label id="camp-max-label" class="block text-sm font-medium text-gray-700 mb-1.5">Máx. Participantes</label><select id="camp-max" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white"></select></div>
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Status</label>
             <select id="camp-status" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white">
@@ -214,7 +220,31 @@
       dropsSel.appendChild(op);
     }
 
-    // Helpers UI
+    
+    // Dropdown de limite (BR: 1..2000 participantes | XvX: 1..200 equipes)
+    const maxSel = document.getElementById('camp-max');
+    const maxLabel = document.getElementById('camp-max-label');
+
+    function fillMaxOptions(fmt){
+      if(!maxSel) return;
+      const isXvx = fmt === 'xvx';
+      const maxN = isXvx ? 200 : 2000;
+
+      if(maxLabel){
+        maxLabel.textContent = isXvx ? 'Qtd. Equipes' : 'Máx. Participantes';
+      }
+
+      // Rebuild options
+      maxSel.innerHTML = '';
+      for(let i=1;i<=maxN;i++){
+        const op=document.createElement('option');
+        op.value=String(i);
+        op.textContent=String(i);
+        maxSel.appendChild(op);
+      }
+    }
+
+// Helpers UI
     function setDisabled(el, disabled){
       if(!el) return;
       el.disabled = !!disabled;
@@ -228,13 +258,26 @@
       const xvx = document.getElementById('xvx-fields');
       const local = document.getElementById('camp-local');
 
+      // Atualiza label + opções do limite
+      const prev = document.getElementById('camp-max')?.value || '1';
+      fillMaxOptions(fmt);
+      // tenta manter o valor anterior (se possível)
+      const maxN = fmt === 'xvx' ? 200 : 2000;
+      const keep = Math.min(Number(prev || 1), maxN);
+      document.getElementById('camp-max').value = String(keep || 1);
+
       if(fmt === 'xvx'){
         br.classList.add('hidden');
         xvx.classList.remove('hidden');
-        // Pedido do Kelvin: Local indisponível se for XvX
+        // Local indisponível se for XvX
         setDisabled(local, true);
         local.value = '';
       } else {
+        br.classList.remove('hidden');
+        xvx.classList.add('hidden');
+        setDisabled(local, false);
+      }
+    } else {
         br.classList.remove('hidden');
         xvx.classList.add('hidden');
         setDisabled(local, false);
@@ -261,6 +304,13 @@
       document.getElementById('camp-id').value = '';
       document.getElementById('camp-modal-title').innerText = 'Novo Campeonato';
       document.getElementById('camp-modal').classList.remove('hidden');
+
+      // Estado inicial do formulário
+      updateModeUI();
+      updateFeeUI();
+      // default limite
+      if(document.getElementById('camp-max')) document.getElementById('camp-max').value = '100';
+
 
       // Preenche guilda
       try {
@@ -298,6 +348,14 @@
     }
 
     function safeText(s){ return (s ?? '').toString().trim(); }
+    function escapeHtml(str){
+      return (str ?? '').toString()
+        .replace(/&/g,'&amp;')
+        .replace(/</g,'&lt;')
+        .replace(/>/g,'&gt;')
+        .replace(/"/g,'&quot;')
+        .replace(/\'/g,'&#39;');
+    }
 
     // Foto -> base64 otimizada (aceita upload até 2MB, mas otimiza para caber no Firestore)
     async function fileToOptimizedDataUrl(file){
@@ -380,6 +438,9 @@
           'bg-emerald-100 text-emerald-700' : 'bg-gray-100 text-gray-600');
 
         const { fmt, fee } = formatMeta(c);
+        const descRaw = (c.description || '').trim();
+        const descShort = descRaw.length > 75 ? (descRaw.slice(0, 75).trimEnd() + '…') : descRaw;
+        const maxLabelTxt = (c.format === 'xvx') ? 'equipes' : 'participantes';
         const iconHtml = c.photoBase64
           ? `<img src="${c.photoBase64}" class="w-11 h-11 rounded-xl object-cover ring-1 ring-gray-200" alt="">`
           : `<div class="w-11 h-11 rounded-xl bg-emerald-50 flex items-center justify-center ring-1 ring-emerald-100">
@@ -397,6 +458,7 @@
                   <div>
                     <h4 class="font-bold text-gray-900">${c.name || 'Sem nome'}</h4>
                     <p class="text-xs text-gray-500 mt-0.5">${c.guildName ? ('Por ' + c.guildName) : ''}</p>
+                    ${descShort ? `<p class=\"text-sm text-gray-600 mt-1.5\">${escapeHtml(descShort)}</p>` : ''}
                   </div>
                 </div>
                 <span class="px-2.5 py-1 rounded-full text-xs font-semibold ${statusClass}">
@@ -410,7 +472,7 @@
                 <div class="flex items-center gap-2"><i data-lucide="calendar" class="w-4 h-4 text-emerald-500"></i> ${c.date || 'Sem data'}</div>
                 <div class="flex items-center gap-2"><i data-lucide="clock" class="w-4 h-4 text-emerald-500"></i> ${c.time || 'Sem horário'}</div>
                 <div class="flex items-center gap-2"><i data-lucide="map-pin" class="w-4 h-4 text-emerald-500"></i> ${c.location || 'Sem local'}</div>
-                <div class="flex items-center gap-2"><i data-lucide="users" class="w-4 h-4 text-emerald-500"></i> Máx. ${c.max || '—'} participantes</div>
+                <div class="flex items-center gap-2"><i data-lucide="users" class="w-4 h-4 text-emerald-500"></i> ${c.max || '—'} ${maxLabelTxt}</div>
               </div>
 
               <div class="flex justify-end gap-2 pt-2 mt-4 border-t border-gray-100">
@@ -436,10 +498,12 @@
       document.getElementById('camp-date').value = c.date || '';
       document.getElementById('camp-time').value = c.time || '';
       document.getElementById('camp-local').value = c.location || '';
-      document.getElementById('camp-max').value = c.max || '';
       document.getElementById('camp-status').value = c.status || 'upcoming';
 
       document.getElementById('camp-format').value = c.format || 'br';
+      updateModeUI();
+      // depois de preencher as opções
+      document.getElementById('camp-max').value = String(c.max || '');
       document.getElementById('camp-mode').value = c.mode || 'solo';
       document.getElementById('camp-drops').value = String(c.drops || 1);
       document.getElementById('camp-xvx').value = c.xvx || '1v1';
@@ -448,6 +512,7 @@
       document.getElementById('camp-feeType').value = c.feeType || 'free';
       updateFeeUI();
       document.getElementById('camp-feeValue').value = c.feeValue || '';
+      document.getElementById('camp-prizeTotal').value = c.prizeTotal || '';
       document.getElementById('camp-link').value = c.link || '';
       document.getElementById('camp-icon').value = c.icon || 'trophy';
       document.getElementById('camp-photo').value = ''; // por segurança, não reatribui file
@@ -504,6 +569,8 @@
       // Fee
       const feeType = safeText(document.getElementById('camp-feeType').value) || 'free';
       const feeValue = feeType === 'paid' ? moneyBRL(document.getElementById('camp-feeValue').value) : null;
+      const prizeTotal = moneyBRL(document.getElementById('camp-prizeTotal').value);
+
 
       // BR / XvX fields
       let mode = null, drops = null, xvx = null;
@@ -527,7 +594,7 @@
         date: safeText(document.getElementById('camp-date').value),
         time: safeText(document.getElementById('camp-time').value),
         location,
-        max: safeText(document.getElementById('camp-max').value),
+        max: Number(document.getElementById('camp-max').value || 0),
         status: safeText(document.getElementById('camp-status').value) || 'upcoming',
 
         format: fmt,         // 'br' | 'xvx'
@@ -540,6 +607,7 @@
 
         feeType,
         feeValue,
+        prizeTotal: prizeTotal || null,
         link,
 
         icon: safeText(document.getElementById('camp-icon').value) || 'trophy',
