--- a/camp.html
+++ b/camp.html
@@ -151,15 +151,18 @@
           </div>
         </div>
 
-        <div>
-          <label class="block text-sm font-medium text-gray-700 mb-1.5">
-        <div>
+                <div>
           <label class="block text-sm font-medium text-gray-700 mb-1.5">Premiação total (R$) (opcional)</label>
-          <input id="camp-prizeTotal" type="number" step="0.01" min="0" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500" placeholder="Ex: 200,00">
+          <input id="camp-prizeTotal" type="number" step="0.01" min="0"
+                 class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"
+                 placeholder="Ex: 200,00">
         </div>
 
-Link para informações (obrigatório) *</label>
-          <input id="camp-link" type="url" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500" placeholder="WhatsApp, Instagram, grupo, etc" required>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1.5">Link para informações (obrigatório) *</label>
+          <input id="camp-link" type="url"
+                 class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"
+                 placeholder="WhatsApp, Instagram, grupo, etc" required>
         </div>
 
         <div class="grid grid-cols-2 gap-3">
@@ -253,7 +256,7 @@ Link para informações (obrigatório) *</label>
     }
 
     function updateModeUI(){
-      const fmt = (document.getElementById('camp-format').value || 'br');
+      const fmt = (document.getElementById('camp-format')?.value || 'br');
       const br = document.getElementById('br-fields');
       const xvx = document.getElementById('xvx-fields');
       const local = document.getElementById('camp-local');
@@ -261,25 +264,22 @@ Link para informações (obrigatório) *</label>
       // Atualiza label + opções do limite
       const prev = document.getElementById('camp-max')?.value || '1';
       fillMaxOptions(fmt);
+
       // tenta manter o valor anterior (se possível)
-      const maxN = fmt === 'xvx' ? 200 : 2000;
-      const keep = Math.min(Number(prev || 1), maxN);
-      document.getElementById('camp-max').value = String(keep || 1);
+      const maxN = (fmt === 'xvx') ? 200 : 2000;
+      const keep = Math.min(Number(prev || 1), maxN) || 1;
+      const maxEl = document.getElementById('camp-max');
+      if(maxEl) maxEl.value = String(keep);
 
       if(fmt === 'xvx'){
-        br.classList.add('hidden');
-        xvx.classList.remove('hidden');
+        if(br) br.classList.add('hidden');
+        if(xvx) xvx.classList.remove('hidden');
         // Local indisponível se for XvX
         setDisabled(local, true);
-        local.value = '';
+        if(local) local.value = '';
       } else {
-        br.classList.remove('hidden');
-        xvx.classList.add('hidden');
-        setDisabled(local, false);
-      }
-    } else {
-        br.classList.remove('hidden');
-        xvx.classList.add('hidden');
+        if(br) br.classList.remove('hidden');
+        if(xvx) xvx.classList.add('hidden');
         setDisabled(local, false);
       }
     }
