--- a/camp.html
+++ b/camp.html
@@ -153,7 +153,7 @@
 
                 <div>
           <label class="block text-sm font-medium text-gray-700 mb-1.5">Premiação total (R$) (opcional)</label>
-          <input id="camp-prizeTotal" type="number" step="0.01" min="0"
+          <input id="camp-prizeTotal" type="text" inputmode="decimal"
                  class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"
                  placeholder="Ex: 200,00">
         </div>
@@ -297,6 +297,23 @@
 
     document.getElementById('camp-format').addEventListener('change', updateModeUI);
     document.getElementById('camp-feeType').addEventListener('change', updateFeeUI);
+    // Premiação: autoformatação pt-BR enquanto digita (sem quebrar valor real)
+    const prizeEl = document.getElementById('camp-prizeTotal');
+    if(prizeEl){
+      prizeEl.addEventListener('input', () => {
+        const n = parseBRL(prizeEl.value);
+        if(n === null){
+          // deixa o usuário digitar livre se ainda não virou número
+          return;
+        }
+        prizeEl.value = formatNumberBR(n);
+      });
+      prizeEl.addEventListener('blur', () => {
+        const n = parseBRL(prizeEl.value);
+        prizeEl.value = n ? formatNumberBR(n) : '';
+      });
+    }
+
 
     // Modal controls (mantém API existente)
     window.openCampModal = () => {
@@ -341,10 +358,40 @@
       try { return JSON.parse(localStorage.getItem('campsList') || '[]'); } catch(_) { return []; }
     }
 
-    function moneyBRL(v){
-      const n = Number(v);
-      if(!isFinite(n) || n<=0) return null;
-      return n.toFixed(2);
+    function parseBRL(v){
+      if(v === null || v === undefined) return null;
+      let s = (v ?? '').toString().trim();
+      if(!s) return null;
+
+      // remove currency and spaces
+      s = s.replace(/R\$\s?/g,'').replace(/\s/g,'');
+
+      // keep digits, comma, dot
+      s = s.replace(/[^0-9,\.]/g,'');
+
+      if(!s) return null;
+
+      // pt-BR: "1.234,56"
+      if(s.includes(',')){
+        s = s.replace(/\./g,'').replace(/,/g,'.');
+      } else {
+        // en/number input: "1234.56" or "1,234.56"
+        s = s.replace(/,/g,'');
+      }
+
+      const n = Number(s);
+      if(!isFinite(n) || n <= 0) return null;
+      // keep 2 decimals
+      return Math.round(n * 100) / 100;
+    }
+
+    function formatNumberBR(n){
+      if(n === null || n === undefined || !isFinite(Number(n))) return '';
+      try{
+        return new Intl.NumberFormat('pt-BR',{ minimumFractionDigits:2, maximumFractionDigits:2 }).format(Number(n));
+      }catch(e){
+        return Number(n).toFixed(2).replace('.',',');
+      }
     }
 
     function safeText(s){ return (s ?? '').toString().trim(); }
@@ -422,12 +469,14 @@
     }
 
     function formatBRL(v){
-      if(v === null || v === undefined || v === '') return null;
-      let n = v;
-      if(typeof n === 'string'){
-        // aceita "1500,50" ou "1500.50"
-        n = n.replace(/\./g, '').replace(',', '.');
+      const n = (typeof v === 'number') ? v : parseBRL(v);
+      if(n === null) return null;
+      try{
+        return new Intl.NumberFormat('pt-BR', { style: 'currency', currency: 'BRL' }).format(n);
+      }catch(e){
+        return 'R$ ' + Number(n).toFixed(2).replace('.', ',');
       }
+    }
       n = Number(n);
       if(!isFinite(n) || n <= 0) return null;
       try{
@@ -535,7 +584,7 @@
       document.getElementById('camp-feeType').value = c.feeType || 'free';
       updateFeeUI();
       document.getElementById('camp-feeValue').value = c.feeValue || '';
-      document.getElementById('camp-prizeTotal').value = c.prizeTotal || '';
+      document.getElementById('camp-prizeTotal').value = c.prizeTotal ? formatNumberBR(c.prizeTotal) : '';
       document.getElementById('camp-link').value = c.link || '';
       document.getElementById('camp-icon').value = c.icon || 'trophy';
       document.getElementById('camp-photo').value = ''; // por segurança, não reatribui file
@@ -591,8 +640,8 @@
 
       // Fee
       const feeType = safeText(document.getElementById('camp-feeType').value) || 'free';
-      const feeValue = feeType === 'paid' ? moneyBRL(document.getElementById('camp-feeValue').value) : null;
-      const prizeTotal = moneyBRL(document.getElementById('camp-prizeTotal').value);
+      const feeValue = feeType === 'paid' ? parseBRL(document.getElementById('camp-feeValue').value) : null;
+      const prizeTotal = parseBRL(document.getElementById('camp-prizeTotal').value);
 
 
       // BR / XvX fields
